feat(llm): 添加 PlanProgram 模式支持完整的 AI 到 3D 几何编译管线
- 在 LlmPlan 中新增 planProgram 和 planSkeleton 字段，支持新旧两种模式
- 实现 PlanProgram → PlanSkeleton → StructuralSkeleton → ExtrudedSolid 完整转换链
- 添加 ExtrudedSolid 和 Face 数据结构用于 3D 几何体表示
- 增强 StructuralSkeletonToExecutablePlanConverter 支持自动执行 extrusion 算法
- 创建 PlanProgramCompiler 统一入口点处理新的编译管线
- 更新系统集成文档，添加完整编译管线使用示例和集成指南
- 实现几何类型系统包括 Vec2/Vec3/Polyline2D/Polygon2D 等基础类型
- 添加 WallExtrusion 算法支持直线墙和折线墙的 3D 拉伸
- 提供 PlanToSkeletonIntegrationHelper 便捷整合工具类
- 保持向后兼容性，传统 components[] 模式继续有效